--- a/cicd/pipeline/test-approve-pipeline.yaml
+++ b/cicd/pipeline/test-approve-pipeline.yaml
@@ -24,6 +24,9 @@ spec:
       taskRef:
         kind: Task
         name: approval
+      workspaces:
+        - name: source
+          workspace: source
     - name: after-approve
       params:
         - name: cmd
