--- a/cicd/pipeline/test-approve-task.yaml
+++ b/cicd/pipeline/test-approve-task.yaml
@@ -12,9 +12,10 @@ spec:
       echo "default" > workspace/source/approval.txt
 
       # Your main loop
-      while [ "$approval" != true ]; do
+      while [ "$approval" != "true" ]; do
           # Your main script logic goes here
-          cat workspace/source/approval.txt
+          approval=$(cat workspace/source/approval.txt"
+          echo $approval
           echo "Waiting for approval..."
 
           sleep 3
