--- a/cicd/pipeline/custom-approval-task.yaml
+++ b/cicd/pipeline/custom-approval-task.yaml
@@ -6,6 +6,9 @@ spec:
   steps:
   - image: docker.io/paichayon1/tekton-approve:0.1
     name: wait-approve
+    ports:
+      - containerPort: 5000
+        protocol: TCP
     script: |
       # loop until approval=true
       python approval.py 123232323232323232
