--- a/cicd/pipeline/custom-approval-task.yaml
+++ b/cicd/pipeline/custom-approval-task.yaml
@@ -5,16 +5,20 @@ metadata:
 spec:
   params:
   - name: recipients
+    type: string
+    description: recipient email addresses
   - name: pipeline_name
+    type: string
   - name: pipelinerun_name
+    type: string  
   steps:
   - image: docker.io/paichayon1/tekton-approve:0.3
     name: wait-approve
     script: |
       # loop until approval=true
-      echo $(recipients)
-      echo $(pipeline_name)
-      echo $(pipelinerun_name)
+      echo $(params.recipients)
+      echo $(params.pipeline_name)
+      echo $(params.pipelinerun_name)
       code=$(shuf -i 1000000000000000-9999999999999999 -n 1)
       echo "code number: $code" 
       python approval.py "$code"
