--- a/cicd/pipeline/custom-approval-task.yaml
+++ b/cicd/pipeline/custom-approval-task.yaml
@@ -24,8 +24,10 @@ spec:
       echo $(params.pipeline_name)
       echo $(params.pipelinerun_name)
       code=$(shuf -i 1000000000000000-9999999999999999 -n 1)
+      cicd_ns="cicd"
+      basedomain="$cicd_ns.apps.524vf.dynamic.opentlc.com"
       echo "code number: $code" 
-      approve_link="$code<p>http://$(params.pipelinerun_name)-wait-for-approve-pod-cicd.apps.524vf.dynamic.opentlc.com"
+      approve_link="<b>Pipeline name:</b> $(params.pipelinerun_name) <br> <b>Pipeline Approve Code:</b> $code<p>Click link below to Approve:<br>http://$(params.pipelinerun_name)-wait-for-approve-pod-$basedomain"
       python sendgmail.py "$user" "$password" "$(params.recipients)" "PipelineSystem - Approve Code" "$approve_link" 
       python approval.py "$code"
 
