--- a/cicd/pipeline/custom-approval-task.yaml
+++ b/cicd/pipeline/custom-approval-task.yaml
@@ -33,7 +33,7 @@ spec:
       python approval.py "$code"
       
       approve_result=$(cat result.txt)
-      # echo $approve_result
+      echo $approve_result
       printf "%s" "${approve_result}" > "$(results.approve_result.path)"
 
 
