--- a/cicd/pipeline/custom-approval-post-oc-task.yaml
+++ b/cicd/pipeline/custom-approval-post-oc-task.yaml
@@ -4,6 +4,8 @@ metadata:
   name: custom-approval-post-oc
 spec:
   params:
+  - name: approve_result
+    type: string 
   - name: pipelinerun_name
     type: string  
   steps:
@@ -20,6 +22,10 @@ spec:
       echo $svc_remove
       oc delete service $svc_remove
       oc delete route $svc_remove
+      echo "${params.approve_result}"
+      if [[ ${params.approve_result} == reject ]]; then
+          exit 1
+      fi 
 
     securityContext:
       runAsNonRoot: true
