--- a/cicd/pipeline/custom-approval-pipeline.yaml
+++ b/cicd/pipeline/custom-approval-pipeline.yaml
@@ -49,6 +49,8 @@ spec:
       params:
         - name: pipelinerun_name
           value: $(context.pipelineRun.name)     
+        - name: approve_result 
+          value: $(tasks.wait-for-approve.results.approve_result) 
       runAfter:
         - wait-for-approve
         - custom-approval-pre-oc
