--- a/cicd/pipeline/myapp-source-pvc.yaml
+++ b/cicd/pipeline/myapp-source-pvc.yaml
@@ -8,5 +8,5 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: thin
+#  storageClassName: thin
   volumeMode: Filesystem
