--- a/cicd/pipeline/argocd-env-configmap.yaml
+++ b/cicd/pipeline/argocd-env-configmap.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1
 kind: ConfigMap
+apiVersion: v1
 metadata:
   name: argocd-env-configmap
+  namespace: cicd
 data:
   ARGOCD_SERVER: 'openshift-gitops-server-openshift-gitops.apps.524vf.dynamic.opentlc.com:443'
