--- a/cicd/pipeline/sonarqube-secret.yaml
+++ b/cicd/pipeline/sonarqube-secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: sonarqube-secret
+  name: sonarqube-secret-willdelete
   namespace: cicd
 data:
   SONAR_HOST_URL: >-
