--- a/platform/argocd/argo-myapp-dev.yaml
+++ b/platform/argocd/argo-myapp-dev.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: myapp-uat
+    namespace: myapp-dev
     server: https://kubernetes.default.svc
   project: default
   source:
