--- a/platform/argocd/argo-myapp-sit.yaml
+++ b/platform/argocd/argo-myapp-sit.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: myapp-uat
+    namespace: myapp-sit
     server: https://kubernetes.default.svc
   project: default
   source:
